--- a/ci-droid-tasks-consumer-services/pom.xml
+++ b/ci-droid-tasks-consumer-services/pom.xml
@@ -16,9 +16,15 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.societegenerale.cidroid-tasks-consumer</groupId>
-            <artifactId>ci-droid-tasks-consumer-extensions</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <groupId>com.societegenerale.ci-droid</groupId>
+            <artifactId>internal-api</artifactId>
+            <version>${ci-droid-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.societegenerale.ci-droid</groupId>
+            <artifactId>extensions</artifactId>
+            <version>${ci-droid-extensions.version}</version>
         </dependency>
 
 
