adding coveralls plugin in build

--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,12 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
 
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.3.0</version>
+            </plugin>
+
         </plugins>
 
 
