--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.societegenerale.ci-droid</groupId>
+    <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
     <artifactId>ci-droid-tasks-consumer</artifactId>
     <name>ci-droid-tasks-consumer Service</name>
 
