adding EnableCiDroidTasksConsumer, and changing the way we build to be able to use it

--- a/ci-droid-tasks-consumer-bootstrap/pom.xml
+++ b/ci-droid-tasks-consumer-bootstrap/pom.xml
@@ -47,17 +47,26 @@
                     <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                 </configuration>
             </plugin>
+
             <plugin>
+
+                <!-- This is required so that we have more flexibility :
+
+                - the -exec jar can be used directly from command line
+                - the regular jar can be used as a dependency in projects that need it
+
+                https://stackoverflow.com/questions/48435800/using-kotlin-classes-from-jar-built-with-kotlin-maven-plugin
+
+                -->
+
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
             </plugin>
+
+
         </plugins>
     </build>
 
