--- a/pom.xml
+++ b/pom.xml
@@ -275,9 +275,11 @@
                 </configuration>
             </plugin>
 
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
                 <configuration>
                     <stagingRepository>https://oss.sonatype.org/service/local/staging/deploy/maven2</stagingRepository>
                     <tagNameFormat>cidroid-tasks-consumer_@{project.version}</tagNameFormat>
