--- a/ci-droid-tasks-consumer-bootstrap/pom.xml
+++ b/ci-droid-tasks-consumer-bootstrap/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
         <artifactId>ci-droid-tasks-consumer</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>ci-droid-tasks-consumer-bootstrap</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <properties>
         <application.name.for.logstash>ci-droid-tasks-consumer</application.name.for.logstash>
