changed the property key name : need to provide API url now, so that it's compatible for github.com and github enterprise

--- a/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
+++ b/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
@@ -1,5 +1,5 @@
 gitHub:
-  url: "http://localhost:9900"
+  api.url: "http://localhost:9900/api/v3"
   login: "someLogin"
   password: "somePassword"
 
