--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -47,7 +47,7 @@ hystrix.command.default.execution.timeout.enabled: false
 feign.hystrix.enabled: false
 
 gitHub:
-  url: "https://www.github.com"
+  api.url: "https://api.github.com"
 #below credentials should be a service account credentials - they will be used to rebase PRs automatically using Git commands.
   login: ${SERVICE_ACCOUNT_USERNAME}
   password: ${SERVICE_ACCOUNT_PASSWORD}
