--- a/ci-droid-tasks-consumer-starter/pom.xml
+++ b/ci-droid-tasks-consumer-starter/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
     <artifactId>ci-droid-tasks-consumer-starter</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.9-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>CI droid starter</name>
@@ -12,7 +12,7 @@
     <parent>
         <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
         <artifactId>ci-droid-tasks-consumer-parent</artifactId>
-        <version>1.0.8</version>
+        <version>1.0.9-SNAPSHOT</version>
     </parent>
 
 
