now managing oauthTOken

--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application-development.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application-development.yml
@@ -8,8 +8,10 @@ spring:
       virtual-host: dev
 
 gitHub:
+  api.url: "http://api.github.com"
   login: "yourLogin"
   password: "yourPassword"
+  oauthToken: "token"
 
 server:
   port: 8081
