--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -46,11 +46,12 @@ spring:
 hystrix.command.default.execution.timeout.enabled: false
 feign.hystrix.enabled: false
 
+
 gitHub:
-  api.url: "https://api.github.com"
-#below credentials should be a service account credentials - they will be used to rebase PRs automatically using Git commands.
-  login: ${SERVICE_ACCOUNT_USERNAME}
-  password: ${SERVICE_ACCOUNT_PASSWORD}
+  api.url: "http://api.github.com"
+  login: "yourLogin"
+  password: "yourPassword"
+  oauthToken: "token"
 
 notifiers:
   github.prComment.enable: true
