fixing MDC clearing when MDC copy is null + tests + javadoc

--- a/ci-droid-tasks-consumer-services/pom.xml
+++ b/ci-droid-tasks-consumer-services/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 </project>
