--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <spring-cloud-stream.version>Ditmars.SR3</spring-cloud-stream.version>
         <spring-cloud.version>Edgware.SR2</spring-cloud.version>
         <spring.cloud.feign.version>1.3.4.RELEASE</spring.cloud.feign.version>
+        <feign-httpclient.version>8.18.0</feign-httpclient.version>
         <spring.boot.version>1.5.10.RELEASE</spring.boot.version>
 
         <lombok.version>1.18.2</lombok.version>
@@ -138,6 +139,12 @@
                         <artifactId>feign-hystrix</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>com.netflix.feign</groupId>
+                <artifactId>feign-httpclient</artifactId>
+                <version>${feign-httpclient.version}</version>
             </dependency>
 
             <dependency>
