--- a/pom.xml
+++ b/pom.xml
@@ -236,11 +236,7 @@
                 <groupId>org.mock-server</groupId>
                 <artifactId>mockserver-netty</artifactId>
                 <version>${mockserver.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mock-server</groupId>
-                <artifactId>mockserver-client-java</artifactId>
-                <version>${mockserver.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
