Minor changes following pr45 (#47)
* removing mockserver-client-java dependency

* configuring mockserver-netty with scope test

* adding previous change (PR 45) in changelog

* making DateProvider a FunctionalInterface

* making the Map static and immutable when posting it to close PRs

* yml formatting

* upgraded to ci-droid-api 1.0.6 (CVE fix)

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 
         <jacoco.version>0.8.1</jacoco.version>
 
-        <ci-droid-api.version>1.0.5</ci-droid-api.version>
+        <ci-droid-api.version>1.0.6</ci-droid-api.version>
         <ci-droid-extensions.version>1.0.6</ci-droid-extensions.version>
     </properties>
 
@@ -236,11 +236,7 @@
                 <groupId>org.mock-server</groupId>
                 <artifactId>mockserver-netty</artifactId>
                 <version>${mockserver.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mock-server</groupId>
-                <artifactId>mockserver-client-java</artifactId>
-                <version>${mockserver.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
