--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.10.RELEASE</version>
+        <version>2.1.1.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -55,7 +55,7 @@
         <spring-cloud.version>Edgware.SR2</spring-cloud.version>
         <spring.cloud.feign.version>1.3.4.RELEASE</spring.cloud.feign.version>
         <feign-httpclient.version>8.18.0</feign-httpclient.version>
-        <spring.boot.version>1.5.10.RELEASE</spring.boot.version>
+        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
 
         <lombok.version>1.18.2</lombok.version>
         <jackson.version>2.9.4</jackson.version>
@@ -77,6 +77,7 @@
         <validation-api.version>2.0.1.Final</validation-api.version>
 
         <jacoco.version>0.8.1</jacoco.version>
+        <guava.version>26.0-jre</guava.version>
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
         <ci-droid-extensions.version>1.0.6</ci-droid-extensions.version>
@@ -120,24 +121,20 @@
                 <scope>import</scope>
             </dependency>
 
-            <dependency>
+           <!-- <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-feign</artifactId>
-                <version>${spring.cloud.feign.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>io.github.openfeign</groupId>
-                        <artifactId>feign-hystrix</artifactId>
-                    </exclusion>
-                </exclusions>
+                <artifactId>spring-cloud-openfeign-dependencies</artifactId>
+                <version>2.0.1.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <dependency>
@@ -255,6 +252,13 @@
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
