--- a/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
+++ b/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
@@ -14,7 +14,7 @@ notifiers:
   http.targetUrl: "http://localhost:9901/notify"
   github.prComment.enable: true
 
-ciDroidBehavior:
+cidroid-behavior:
 # whenPushOnDefaultBranch:
   tryToRebaseOpenPrs.enabled: true
   notifyOwnerForNonMergeablePr.enabled: true
