--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring-cloud-stream.version>Ditmars.SR3</spring-cloud-stream.version>
-        <spring-cloud.version>Edgware.SR2</spring-cloud.version>
-        <spring.cloud.feign.version>1.3.4.RELEASE</spring.cloud.feign.version>
+        <spring-cloud-stream.version>Fishtown.RELEASE</spring-cloud-stream.version>
+        <spring-cloud-openfeign-dependencies.version>2.0.2.RELEASE</spring-cloud-openfeign-dependencies.version>
+
         <feign-httpclient.version>8.18.0</feign-httpclient.version>
+
         <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
 
         <lombok.version>1.18.2</lombok.version>
@@ -121,18 +122,10 @@
                 <scope>import</scope>
             </dependency>
 
-           <!-- <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>-->
-
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-openfeign-dependencies</artifactId>
-                <version>2.0.1.RELEASE</version>
+                <version>${spring-cloud-openfeign-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
