--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring-cloud-stream.version>Fishtown.RELEASE</spring-cloud-stream.version>
-        <spring-cloud-openfeign-dependencies.version>2.0.2.RELEASE</spring-cloud-openfeign-dependencies.version>
+        <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
 
         <feign-httpclient.version>8.18.0</feign-httpclient.version>
 
@@ -116,16 +115,8 @@
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-stream-dependencies</artifactId>
-                <version>${spring-cloud-stream.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-openfeign-dependencies</artifactId>
-                <version>${spring-cloud-openfeign-dependencies.version}</version>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
