build is finally working

--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -74,6 +74,10 @@ cidroid-behavior:
     "**/*Dto.java": "https://some_link_to_some_best_practices_repo/noDtoClass.md"
 
 
+feign:
+  httpclient:
+    enabled: false
+
 logging:
   level:
     root: info
