--- a/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
+++ b/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
@@ -25,3 +25,7 @@ cidroid-behavior:
   bestPracticeNotifier.enabled: true
   patternToResourceMapping:
     "**/*Dto.java": "https://someLinkToSomeResource/ci-droid-best-practices/noDtoClass.md"
+
+feign:
+  httpclient:
+    enabled: false
