spring boot 2 upgrade (#55)
* prefix must not have upper case

* adding spring-boot-configuration-processor

* versions upgrade and clean up

* no need to declare CiDroidBehavior anymore - it will be done automatically

* adding Spring milestones repo to get Spring Cloud Greenwich RC2

* changelog + upgrading to 1.1.0-SNAPSHOT as we have breaking changes

--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -60,7 +60,7 @@ notifiers:
 #  email.enable: true
 #  http.targetUrl: "http://localhost:9901/notify"
 
-ciDroidBehavior:
+cidroid-behavior:
 #  whenPushOnDefaultBranch:
   tryToRebaseOpenPrs.enabled: true
   notifyOwnerForNonMergeablePr.enabled: true
@@ -72,6 +72,7 @@ ciDroidBehavior:
   patternToResourceMapping:
 # example of associating a document with a file pattern
     "**/*Dto.java": "https://some_link_to_some_best_practices_repo/noDtoClass.md"
+
 
 
 logging:
