--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
     <artifactId>ci-droid-tasks-consumer-parent</artifactId>
     <name>ci-droid-tasks-consumer Service</name>
 
-    <version>1.0.13-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.10.RELEASE</version>
+        <version>2.1.1.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -37,6 +37,15 @@
         </license>
     </licenses>
 
+    <repositories>
+
+        <repository>
+            <id>Spring milestones</id>
+            <url>https://repo.spring.io/milestone/</url>
+        </repository>
+
+    </repositories>
+
     <issueManagement>
         <url>https://github.com/societe-generale/ci-droid-tasks-consumer/issues</url>
         <system>GitHub</system>
@@ -51,11 +60,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring-cloud-stream.version>Ditmars.SR3</spring-cloud-stream.version>
-        <spring-cloud.version>Edgware.SR2</spring-cloud.version>
-        <spring.cloud.feign.version>1.3.4.RELEASE</spring.cloud.feign.version>
-        <feign-httpclient.version>8.18.0</feign-httpclient.version>
-        <spring.boot.version>1.5.10.RELEASE</spring.boot.version>
+        <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
+
+        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
 
         <lombok.version>1.18.2</lombok.version>
         <jackson.version>2.9.4</jackson.version>
@@ -77,6 +84,7 @@
         <validation-api.version>2.0.1.Final</validation-api.version>
 
         <jacoco.version>0.8.1</jacoco.version>
+        <guava.version>26.0-jre</guava.version>
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
         <ci-droid-extensions.version>1.0.6</ci-droid-extensions.version>
@@ -114,36 +122,10 @@
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-stream-dependencies</artifactId>
-                <version>${spring-cloud-stream.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-feign</artifactId>
-                <version>${spring.cloud.feign.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>io.github.openfeign</groupId>
-                        <artifactId>feign-hystrix</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-
-            <dependency>
-                <groupId>com.netflix.feign</groupId>
-                <artifactId>feign-httpclient</artifactId>
-                <version>${feign-httpclient.version}</version>
             </dependency>
 
             <dependency>
@@ -255,6 +237,13 @@
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
