--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <guava.version>27.0-jre</guava.version>
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
-        <ci-droid-extensions.version>1.0.7</ci-droid-extensions.version>
+        <ci-droid-extensions.version>1.0.8</ci-droid-extensions.version>
     </properties>
 
     <!-- required by maven-release-plugin -->
@@ -304,6 +304,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <!--<version>${maven-surefire-plugin.version}</version>-->
                 <configuration>
                     <!-- Sets the VM argument line used when unit tests are run. -->
                     <argLine>${surefireArgLine}</argLine>
@@ -313,6 +314,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <!--<version>${maven-failsafe-plugin.version}</version>-->
                 <configuration>
                     <includes>
                         <include>**/*IT.java</include>
