--- a/pom.xml
+++ b/pom.xml
@@ -400,6 +400,13 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
+
+                <configuration>
+                    <jacocoReports>
+                        <jacocoReport>${project.build.directory}/site/jacoco-it/jacoco.xml</jacocoReport>
+                        <jacocoReport>${project.build.directory}/site/jacoco-ut/jacoco.xml</jacocoReport>
+                    </jacocoReports>
+                </configuration>
             </plugin>
 
         </plugins>
