--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
         <ci-droid-extensions.version>1.0.9</ci-droid-extensions.version>
+        <junit5.version>5.4.0</junit5.version>
     </properties>
 
     <!-- required by maven-release-plugin -->
@@ -141,6 +142,19 @@
             </dependency>
 
             <!-- Test -->
+            <dependency>
+                <groupId>org.junit.vintage</groupId>
+                <artifactId>junit-vintage-engine</artifactId>
+                <version>${junit5.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit5.version}</version>
+                <scope>test</scope>
+            </dependency>
 
             <dependency>
                 <groupId>com.jayway.awaitility</groupId>
