making sure jackson-databind version is defined properly for starter

--- a/ci-droid-tasks-consumer-starter/pom.xml
+++ b/ci-droid-tasks-consumer-starter/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ci-droid-tasks-consumer-starter</artifactId>
@@ -18,6 +19,16 @@
     <description>CI-droid tasks consumer starter</description>
 
     <dependencies>
+
+        <!--
+        see https://stackoverflow.com/questions/55175790/maven-getting-different-versions-when-using-jar-as-a-dependency-confusing
+        for why we need to define the version here
+        -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
