Give feedback to developers on too many files their PR  (#20)

--- a/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
+++ b/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
@@ -25,3 +25,5 @@ cidroid-behavior:
   bestPracticeNotifier.enabled: true
   patternToResourceMapping:
     "**/*Dto.java": "https://someLinkToSomeResource/ci-droid-best-practices/noDtoClass.md"
+    maxFilesInPr: 10
+    maxFilesInPRExceededWarningMessage: "The PR should not have more than {0} files"
