--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -72,6 +72,8 @@ cidroid-behavior:
   patternToResourceMapping:
 # example of associating a document with a file pattern
     "**/*Dto.java": "https://some_link_to_some_best_practices_repo/noDtoClass.md"
+    maxFilesInPr: 10
+    maxFilesInPRExceededWarningMessage: "The PR should not have more than {0} files"
 
 
 
