reworked on review comments

--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -69,6 +69,7 @@ cidroid-behavior:
     limitInDays: 180
 #  whenPullRequestEvent:
   bestPracticeNotifier.enabled: true
+  maxFilesInPRNotifier.enabled: true
   patternToResourceMapping:
 # example of associating a document with a file pattern
     "**/*Dto.java": "https://some_link_to_some_best_practices_repo/noDtoClass.md"
