Giving feedback to developers on the size of their PR  - too many files (#68)

--- a/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
+++ b/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
@@ -25,3 +25,8 @@ cidroid-behavior:
   bestPracticeNotifier.enabled: true
   patternToResourceMapping:
     "**/*Dto.java": "https://someLinkToSomeResource/ci-droid-best-practices/noDtoClass.md"
+
+  maxFilesInPRNotifier:
+    enabled: true
+    maxFiles: 5
+    warningMessage: "Oops! The your PR has more than {0} files. It's going to be tough for the reviewer :( . Limit the number of files in your PR."
