--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -73,7 +73,10 @@ cidroid-behavior:
 # example of associating a document with a file pattern
     "**/*Dto.java": "https://some_link_to_some_best_practices_repo/noDtoClass.md"
 
-
+  maxFilesInPRNotifier:
+      enabled: true
+      maxFiles: 10
+      warningMessage: "The PR should not have more than {0} files"
 
 logging:
   level:
